Update: max resource limit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,7 @@ services:
     volumes:
       - ./screenshots:/app/screenshots
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
